--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 </div>
                 <div class="project__image project__image-four" data-scroll data-scroll-speed="4">
                 </div>
+                <div class="project__image project__image-five" data-scroll data-scroll-speed="1">
+                </div>
+                <div class="project__image project__image-six" data-scroll data-scroll-speed="5">
+                </div>
             </div>
 
             <!-- <div class="project-next-link" data-scroll>
