--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <!-- menu -->
         <nav class="menu">
             <div class="menu__items">
-                <div class="menu__items-link active"><a href="index.html">INDEX</a></div>
+                <div class="menu__items-link active"><a href="#">INDEX</a></div>
             </div>
             <div class="menu__logo">
-                <a href="about.html">ABOUT</a>
+                <a href="about">ABOUT</a>
             </div>
         </nav>
 
