--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
         <!-- menu -->
         <nav class="menu">
             <div class="menu__logo">
-                <a href="index.html">INDEX</a>
+                <a href="http://mdsvmr.xyz/">INDEX</a>
             </div>
             <div class="menu__items">
-                <div class="menu__items-link active"><a href="about.html">ABOUT</a></div>
+                <div class="menu__items-link active"><a href="#">ABOUT</a></div>
             </div>
         </nav>
 
