--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script>
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+        }; 
         // smooth scroll 
         const scroll = new LocomotiveScroll({
             el: document.querySelector('#js-scroll'),
