--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <!-- menu -->
         <nav class="menu">
             <div class="menu__logo">
-                <a href="http://mdsvmr.xyz/">INDEX</a>
+                <a href="https://mdsvmr.xyz/">INDEX</a>
             </div>
             <div class="menu__items">
                 <div class="menu__items-link active"><a href="#">ABOUT</a></div>
