--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="project__container" data-scroll-section>
 
             <div class="project__container-title" data-scroll>
-                <h1 class="anime-js-title">MDSVMR</h1>
+                <h1 class="anime-js-title">A better future happens by design</h1>
             </div>
             <div class="project__container-subtitle" data-scroll>
                 <p>デザイナー</p>
