--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.2.5/dist/locomotive-scroll.min.css">
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.2.5/dist/locomotive-scroll.min.js"></script>
     <link rel="icon" href="images/logo2.png">
-    <title>MDSVMR</title>
+    <title>mdsvmr</title>
 </head>
 
 <body id="js-scroll">
