--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
             <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Designer</span></p>
 
             <p class="about__container-data" data-scroll>Hi folks, I am a Digital Designer working on User Interface 
-                Design and Front-end Development. I love to create loveable and interactive website, mobile app and stuff. 
+                Design and Front-end Development. Love to create loveable and interactive website, mobile app and stuff. 
             </p>
             
-            <p class="about__container-data" data-scroll>I specialize in creative design and digital experience. My aim is 
+            <p class="about__container-data" data-scroll>Specialize in creative design and digital experience. My aim is 
                 to visualize your ideas through my design and development skills into an impressive products. 
             </p>
 
