--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
             <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Designer</span></p>
 
             <p class="about__container-data" data-scroll>Hi folks, I am a Digital Designer working on User Interface 
-                Design and Front-end Development. I love to create loveable and interactive website, mobile app and stuff. 
+                Design and Front-end Development. I am passionate about everything that has to do with Digital Design. 
             </p>
             
             <p class="about__container-data" data-scroll>I specialize in creative design and digital experience. My aim is 
-                to visualize your ideas through my design and development skills into an impressive products. 
+                to solve problems through beautiful detailed design and experiences. 
             </p>
 
             <p data-scroll>If you have any questions or would like to have a chat, don't hesitate to <span
