--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
         <div class="about__container" data-scroll-section>
             <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Designer</span></p>
 
-            <p class="about__container-data" data-scroll>Hi folks, I am a Digital Designer who passionate about everything that has to do with Digital Design specifically web and mobile experiences. 
+            <p class="about__container-data" data-scroll>Hi folks, I am a Designer who passionate about everything that has to do with Digital Design specifically web and mobile experiences. 
             </p>
             
-            <p class="about__container-data" data-scroll>As a designer, I have designed my goal is build exceptional user experiences and interfaces that are beautiful and easy to use.
+            <p class="about__container-data" data-scroll>As a designer, My goal is build exceptional user experiences and interfaces that are beautiful and easy to use.
             </p>
 
             <p data-scroll>If you have any questions or would like to have a chat, don't hesitate to <span
