--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="about__container" data-scroll-section>
             <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Designer</span></p>
 
-            <p class="about__container-data" data-scroll>Hi folks, I am a Designer who passionate about everything that has to do with Digital Design specifically web and mobile experiences. 
+            <p class="about__container-data" data-scroll>Hi, I'm a Designer who passionate about everything that has to do with digital design specifically web and mobile experiences. 
             </p>
             
             <p class="about__container-data" data-scroll>As a designer, my goal is build exceptional user experiences and interfaces that are beautiful and easy to use.
