--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     class="about__container-contact-link"><a href="mailto:mokhammadfahreza@gmail.com/">get
                         in touch.</a></span></p>
 
-            <p class="about__container-link" data-scroll>Follow me for more thoughts and updates on <a href="https://dribbble.com/mdsvmr">Dribbble</a>, <a href="https://github.com/mdsvmr/">Github</a>, <a href="https://medium.com/@mokhammadfahreza">Medium</a>, <a href="https://www.linkedin.com/in/mokhammadfahreza/">Linkedin</a>.</p>
+            <p class="about__container-link" data-scroll>Follow me for more thoughts and updates on <a href="https://dribbble.com/fahrezadipa">Dribbble</a>, <a href="https://github.com/mdsvmr/">Github</a>, <a href="https://medium.com/@mokhammadfahreza">Medium</a>, <a href="https://www.linkedin.com/in/mokhammadfahreza/">Linkedin</a>.</p>
         </div>
 
         <div class="cursor-follow"></div>
