--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <p class="about__container-data" data-scroll>A growing person who love everything related with digital design specifically web and mobile experiences. 
             </p>
             
-            <p class="about__container-data" data-scroll>Always solving problems with beautiful clean interface and using user-centric experiences that easy to use.
+            <p class="about__container-data" data-scroll>Always solving problems with beautiful clean interface and using user-centric experience that easy to use.
             </p>
 
             <p data-scroll>If you have any questions or would like to have a chat, don't hesitate to <span
