--- a/index.html
+++ b/index.html
@@ -35,18 +35,30 @@
             </div>
 
             <div class="project__container-images">
-                <div class="project__image project__image-one" data-scroll data-scroll-speed="1">
-                </div>
-                <div class="project__image project__image-two" data-scroll data-scroll-speed="4">
-                </div>
-                <div class="project__image project__image-three" data-scrol data-scroll-speed="2">
-                </div>
-                <div class="project__image project__image-four" data-scroll data-scroll-speed="4">
-                </div>
-                <div class="project__image project__image-five" data-scroll data-scroll-speed="1">
-                </div>
-                <div class="project__image project__image-six" data-scroll data-scroll-speed="5">
-                </div>
+                <a href="https://dribbble.com/shots/19083712-News-Article-Mobile-App">
+                    <div class="project__image project__image-one" data-scroll data-scroll-speed="1">
+                    </div>
+                </a>
+                <a href="https://www.linkedin.com/posts/mokhammadfahreza_interactiondesign-activity-6954754596846137345-OqRC?utm_source=share&utm_medium=member_desktop">
+                    <div class="project__image project__image-two" data-scroll data-scroll-speed="4">
+                    </div>
+                </a>
+                <a href="https://dribbble.com/shots/18327657-E-Commerce-Dashboard-Metamarket">
+                    <div class="project__image project__image-three" data-scrol data-scroll-speed="2">
+                    </div>
+                </a>
+                <a href="https://dribbble.com/shots/19036151-Zenly-Fintech-Landing-Page">
+                    <div class="project__image project__image-four" data-scroll data-scroll-speed="4">
+                    </div>
+                </a>
+                <a href="https://dribbble.com/shots/17075637-Grooze-Sales-Analytics-Dashboard">
+                    <div class="project__image project__image-five" data-scroll data-scroll-speed="1">
+                    </div>
+                </a>
+                <a href="https://dribbble.com/shots/16870598-Cryptograph-Crypto-Wallet-App">
+                    <div class="project__image project__image-six" data-scroll data-scroll-speed="5">
+                    </div>
+                </a>
             </div>
 
             <!-- <div class="project-next-link" data-scroll>
