--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <p class="about__container-link" data-scroll>Follow me for more thoughts and updates on <a href="https://dribbble.com/fahrezadipa">Dribbble</a>, <a href="https://github.com/mdsvmr/">Github</a>, <a href="https://medium.com/@mokhammadfahreza">Medium</a>, <a href="https://www.linkedin.com/in/mokhammadfahreza/">Linkedin</a>.</p>
         </div>
 
-        <div class="cursor-follow"></div>
+        <!-- <div class="cursor-follow"></div> -->
     </div>
     <script src="js/script.js"></script>
     <script>
