--- a/about.html
+++ b/about.html
@@ -28,19 +28,16 @@
 
         <!-- about-section -->
         <div class="about__container" data-scroll-section>
-            <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Designer</span></p>
+            <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Design</span></p>
 
             <p class="about__container-data" data-scroll>A growing person who love everything related with digital design specifically web and mobile experiences. 
-            </p>
-            
-            <p class="about__container-data" data-scroll>Always solving problems with clean interface and using user-centric experience that leave a positive impact.
             </p>
 
             <p data-scroll>If you have any questions or would like to have a chat, don't hesitate to <span
                     class="about__container-contact-link"><a href="mailto:mokhammadfahreza@gmail.com/">get
                         in touch.</a></span></p>
 
-            <p class="about__container-link" data-scroll>Follow me for more thoughts and updates on <a href="https://dribbble.com/fahrezadipa">Dribbble</a>, <a href="https://github.com/mdsvmr/">Github</a>, <a href="https://medium.com/@mokhammadfahreza">Medium</a>, <a href="https://www.linkedin.com/in/mokhammadfahreza/">Linkedin</a>.</p>
+            <p class="about__container-link" data-scroll>Reach me for more thoughts and updates on <a href="https://dribbble.com/fahrezadipa">Dribbble</a>, <a href="https://github.com/mdsvmr/">Github</a>, <a href="https://medium.com/@mokhammadfahreza">Medium</a>.</p>
         </div>
 
         <!-- <div class="cursor-follow"></div> -->
