--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
         <!-- about-section -->
         <div class="about__container" data-scroll-section>
-            <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Design</span></p>
+            <p class="about__container-data" data-scroll>Mokhammad Fahreza<br><span>— Designer</span></p>
 
             <p class="about__container-data" data-scroll>A growing person who love everything related with digital design specifically web and mobile experiences. 
             </p>
